examples/http-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-svc
  labels:
    app: http-svc
spec:
  type: NodePort
  ports:
  - port: 80
    # This port needs to be available on all nodes in the cluster
    nodePort: 30301
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: http-svc
